# SimpleSDLGames

./: CMakeLists.txt  Makefile  README.md
Common/include/: CommonTypes.hpp
GUI/include/: TCellRectangles.h  TDrawer.h  TFontTTF.h  TParams.h  TRenderer.h  TSdlWrapper.h  TSurface.h  TTexture.h  TWindow.h  sdl2_include.h
GUI/src/: TCellRectangles.cpp  TDrawer.cpp  TFontTTF.cpp  TRenderer.cpp  TSdlWrapper.cpp  TSurface.cpp  TTexture.cpp  TWindow.cpp
GameBackend/include/: TCell.h  TCellsBlock.h  TCellsChain.h  TGameField.h  TMinesweeperBackend.h  TMinesweeperField.h  TMinesweeperFieldGenerator.h  TScoreStorage.h  TSnake.h  TSnakeBackend.h  TSnakeFunctions.h  TSnakeGame.h  TStepAction.h  TTetrisBackend.h
GameBackend/src/: TCell.cpp  TCellsBlock.cpp  TCellsChain.cpp  TGameField.cpp  TMinesweeperBackend.cpp  TMinesweeperField.cpp  TMinesweeprFieldGenerator.cpp  TSnake.cpp  TSnakeBackend.cpp  TSnakeFunctions.cpp  TSnakeGame.cpp  TStepAction.cpp  TTetrisBackend.cpp
GameRunner/include/: IAbstractRunner.h  TDrawer.h  TFieldDrawer.h  TFontDrawer.h  TMainMenu.h  TMinesweeperGame.h  TMinesweeperGameRunner.h  TSnakeGame.h  TSnakeGameRunner.h  TTetrisGame.h  TTetrisGameRunner.h
GameRunner/src/: IAbstractRunner.cpp  TDrawer.cpp  TFieldDrawer.cpp  TFontDrawer.cpp  TMainMenu.cpp  TMinesweeperGame.cpp  TMinesweeperGameRunner.cpp  TScoreStorage.cpp  TSnakeGame.cpp  TSnakeGameRunner.cpp  TTetrisGame.cpp  TTetrisGameRunner.cpp  main.cpp
include/: TParams.h  TRenderer.h  TWindow.h
src/: TDrawer.cpp  TSurface.cpp  main.cpp
